# jlens-plamo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/corpus/: build_corpus.py  config.yaml
data/lens/: README.md
data/probes/: README.md  haiku_prompts.example.jsonl
jlens_plamo/: apply.py  model_loading.py  plamo_adapter.py  probes.py
scripts/: qualitative_check.py  run_fit.py  smoke_test.py
web/: app.py  index.html
