[project]
name = "jlens-plamo"
version = "0.1.0"
description = "Japanese reproduction of Anthropic's Jacobian Lens (J-lens) on pfnet/plamo-3-nict-8b-base, with a haiku lookahead probing extension"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "accelerate>=0.33",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "jlens @ git+https://github.com/anthropics/jacobian-lens",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.112",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jlens_plamo"]

[tool.hatch.metadata]
allow-direct-references = true
