[project]
name = "jlens-plamo"
version = "0.1.0"
description = "Japanese reproduction of Anthropic's Jacobian Lens (J-lens) on pfnet/plamo-3-nict-8b-base, with a haiku lookahead probing extension"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.4",
    "transformers>=5.5",
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "accelerate>=0.33",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "numba>=0.60",
    "jlens @ git+https://github.com/anthropics/jacobian-lens",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.112",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jlens_plamo"]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
# The default PyPI torch wheel is built against CUDA 13, which is newer than
# this machine's NVIDIA driver (576.88, CUDA 12.9) supports. Pin to the
# matching cu129 build instead of requiring a driver upgrade.
torch = { index = "pytorch-cu129" }
